# react-native-bench

./: .gitignore  .rust-toolchain.toml  Bench.podspec  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json  ubrn.config.yaml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bench/: BenchModule.kt  BenchPackage.kt
cpp/: react-native-bench.cpp  react-native-bench.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/bench.example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/BenchExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/BenchExample.xcodeproj/: project.pbxproj
example/ios/BenchExample.xcodeproj/xcshareddata/xcschemes/: BenchExample.xcscheme
example/src/: App.tsx
ios/: Bench.h  Bench.mm
rust/: .editorconfig  .gitignore  Cargo.toml
rust/kizubin/: Cargo.toml
rust/kizubin/src/: cli.rs  lib.rs  main.rs
rust/kizubin/src/cliutil/: common.rs  mod.rs  multistep.rs  step.rs
rust/kizubin/src/cmds/: cmd.rs  mod.rs  proc.rs
rust/kizubin/src/commands/: building.rs  common.rs  init.rs  mod.rs
rust/kizubin/src/commands/builders/: android.rs  ios.rs  mod.rs
rust/kizubin/src/fsutil/: mod.rs  operms.rs
rust/metrics/: Cargo.toml
rust/metrics/src/: lib.rs
rust/uniffi-bindgen/: Cargo.toml
src/: NativeBench.ts  index.tsx
