[package]
name = "kizubin"
version = "0.1.0"
edition = "2024"

[lib]
name = "kizubin"
path = "src/lib.rs"

[[bin]]
name = "kizubin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1"
camino = "1.2.0"
crossterm = "0.29.0"
unicode-segmentation = "1.12.0"
